--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,7 @@
     from = "/*" # redirect any path
     to = "/index.html" # to this html page
     status = 200 # with this status
+[[redirects]]
+  from = "/api/*"
+  to = "https://api.binance.com"
+  status = 200
