--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@
 
 
 [[redirects]]
-    from = "cryptod3/api/v1/*" 
+    from = "/cryptod3/api/*" 
     to = "https://api.binance.com"
     force= true
     status = 200 # with this status
