--- a/netlify.toml
+++ b/netlify.toml
@@ -6,11 +6,7 @@
     from = "/*" # redirect any path
     to = "/index.html" # to this html page
     status = 200 # with this status
+    
+[[plugins]]
+  package = "@netlify/plugin-functions-install-core"
 
-
-
-[[redirects]]
-    from = "/api/*" 
-    to = "/https://api.binance.com"
-    force= true
-    status = 200 # with this status
