--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio2",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:3050",
   "dependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.1.1",
