--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio2",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:3050",
   "dependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.1.1",
@@ -23,7 +22,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.174.0"
   }
 }
